finished most of lesson 6 personal assignment
