# swagger.json
@@ -7,12 +7,23 @@
   },
   "host": "cse341-project2-qlp6.onrender.com",
   "basePath": "/",
+  "tags": [
+    {
+      "name": "API",
+      "description": ""
+    },
+    {
+      "name": "User",
+      "description": ""
+    }
+  ],
   "schemes": [
     "https"
   ],
   "paths": {
     "/api-docs": {
       "get": {
+        "tags": ["API"],
         "description": "",
         "responses": {
           "default": {
@@ -23,6 +34,8 @@
     },
     "/recipes/": {
       "get": {
+        "tags": ["User"],
+        "summary": "Get all Recipes",
         "description": "",
         "produces": [
           "application/json"
@@ -37,6 +50,8 @@
         }
       },
       "post": {
+        "tags": ["User"],
+        "summary": "Create new Recipe",
         "description": "",
         "parameters": [
           {
@@ -55,17 +70,26 @@
                   "example": "any"
                 },
                 "servings": {
-                  "example": "any"
+                  "example": 1
                 },
                 "prepTime": {
-                  "example": "any"
+                  "example": 1
                 },
                 "cookTime": {
-                  "example": "any"
+                  "example": 1
                 },
-                "ingredients": {
-                  "example": "any"
-                }
+                "ingredients": [
+                  {
+                    "name": "any",
+                    "quantity": 1,
+                    "unit": "any"
+                  },
+                  {
+                    "name": "any",
+                    "quantity": 1,
+                    "unit": "any"
+                  }
+                ]
               }
             }
           }
@@ -82,6 +106,8 @@
     },
     "/recipes/{id}": {
       "get": {
+        "tags": ["User"],
+        "summary": "Returns Recipe by Recipe ID",
         "description": "",
         "produces": [
           "application/json"
@@ -104,6 +130,8 @@
         }
       },
       "put": {
+        "tags": ["User"],
+        "summary": "Update Recipe",
         "description": "",
         "parameters": [
           {
@@ -153,6 +181,8 @@
         }
       },
       "delete": {
+        "tags": ["User"],
+        "summary": "Delete Recipe",
         "description": "",
         "parameters": [
           {
